<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fractals</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_picture">Picture</string>


    <string name="ImageDrawer">ImageDrawer</string>

    <string name="drawKoch">Снежинка Коха</string>
    <string name="KochIterations">Iterations: </string>
    <string name="stdKochNum">5</string>

    <string name="drawMandel">Множество Мандельброта</string>
    <string name="MandelIterations">Iterations: </string>
    <string name="stdMandelNum">50</string>
    <string name="MandelFormula">Formula: </string>
    <string-array name="MandelFormulas">
        <item>z + c</item>
        <item>z^2 + c</item>
        <item>z^4 + c</item>
        <item>z^8 + c</item>
        <item>z^16 + c</item>
        <item>sin(z) + c</item>
        <item>exp(z) + c</item>
    </string-array>

    <string name="drawJulia">Множество Жюлиа</string>
    <string name="JuliaIterations">Iterations: </string>
    <string name="stdJuliaNum">50</string>
    <string name="JuliaFormula">Formula: </string>
    <string-array name="JuliaFormulas">
        <item>z + c</item>
        <item>z^2 + c</item>
        <item>z^4 + c</item>
        <item>z^8 + c</item>
        <item>z^16 + c</item>
        <item>sin(z) + c</item>
        <item>exp(z) + c</item>
    </string-array>

    <string name="drawIFS">Нарисовать фрактал</string>
    <string name="IFSIterations">Iterations: </string>
    <string name="stdIFSNum">200000</string>
    <string name = "IFSFractal">Фрактал: </string>
    <string-array name="IFSFractals">
        <item>Треугольник Серпинского</item>
        <item>Ковер Серпинского</item>
        <item>Дракон</item>
        <item>Спираль</item>
        <item>Ель</item>
        <item>Кленовый лист</item>
        <item>Лестница</item>
        <item>Папоротник</item>
    </string-array>

</resources>
