<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/KochLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/std_margin"
        android:background="@color/std_background"
        android:paddingLeft="@dimen/std_padding"
        android:paddingRight="@dimen/std_padding">

        <RelativeLayout
            android:id="@+id/rowKoch"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/std_row_height">

            <TextView
                android:id="@+id/txtViewKoch"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:gravity="start"
                android:text="@string/KochIterations"
                style="@style/stdText"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/edtTextKochNum"
                android:layout_toRightOf="@id/txtViewKoch"
                android:layout_toEndOf="@id/txtViewKoch"

                android:gravity="end"
                android:inputType="numberDecimal"
                style="@style/stdText"
                android:text="@string/stdKochNum"/>


        </RelativeLayout>

        <Button
            android:id="@+id/btnDrawKoch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rowKoch"

            android:text="@string/drawKoch"
            style="@style/stdText"

            android:onClick="computeKoch"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/MandelbrotLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/KochLayout"
        android:layout_marginTop="@dimen/std_margin"
        android:layout_marginBottom="@dimen/std_margin"
        android:background="@color/std_background"
        android:paddingLeft="@dimen/std_padding"
        android:paddingRight="@dimen/std_padding">

        <RelativeLayout
            android:id="@+id/rowMandel1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/std_row_height">

            <TextView
                android:id="@+id/txtViewMandel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                style="@style/stdText"
                android:gravity="start"
                android:text="@string/MandelIterations" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/edtTextMandelNum"
                android:layout_toRightOf="@id/txtViewMandel"
                android:layout_toEndOf="@id/txtViewMandel"

                android:gravity="end"
                android:inputType="numberDecimal"
                style="@style/stdText"
                android:text="@string/stdMandelNum"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rowMandel2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/std_row_height"
            android:layout_below="@id/rowMandel1">

            <TextView
                android:id="@+id/txtViewMandelFormula"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                style="@style/stdText"
                android:gravity="start"
                android:text="@string/MandelFormula" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/spinnerFormula"
                android:layout_toRightOf="@id/txtViewMandelFormula"
                android:layout_toEndOf="@id/txtViewMandelFormula"

                android:gravity="end"
                style="@style/stdText"
                android:entries="@array/MandelFormulas"
                android:spinnerMode="dialog" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnDrawMandel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rowMandel2"

            android:text="@string/drawMandel"
            style="@style/stdText"

            android:onClick="computeMandel"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/TriangleLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MandelbrotLayout"
        android:layout_marginTop="@dimen/std_margin"
        android:layout_marginBottom="@dimen/std_margin"
        android:background="@color/std_background"
        android:paddingLeft="@dimen/std_padding"
        android:paddingRight="@dimen/std_padding">

        <RelativeLayout
            android:id="@+id/rowTriangle"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/std_row_height">

            <TextView
                android:id="@+id/txtViewTriangle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                style="@style/stdText"
                android:gravity="start"
                android:text="@string/TriangleIterations" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/edtTextTriangleNum"
                android:layout_toRightOf="@id/txtViewTriangle"
                android:layout_toEndOf="@id/txtViewTriangle"

                android:gravity="end"
                android:inputType="numberDecimal"
                style="@style/stdText"
                android:text="@string/stdTriangleNum"/>


        </RelativeLayout>

        <Button
            android:id="@+id/btnDrawTriangle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rowTriangle"

            android:text="@string/drawTriangle"
            style="@style/stdText"

            android:onClick="computeTriangle"/>

    </RelativeLayout>


</RelativeLayout>
